feat: added table section

--- a/index.html
+++ b/index.html
@@ -139,6 +139,53 @@
 
         </div>
 
+        <!-- table -->
+         <div class="bg-white rounded-lg shadow overflow-hidden">
+            <div class="table-container">
+                <table class="min-w-full divide-y divide-gray-200">
+                    <thead class="bg-gray-50">
+                        <tr>
+                            <th scope="col" class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">ID</th>
+                            <th scope="col" class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                            <th scope="col" class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Designation</th>
+                            <th scope="col" class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Salary</th>
+                            <th scope="col" class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Experience (Years)
+                            </th>
+                           
+                        </tr>
+                    </thead>
+
+
+
+                    <tbody class="bg-white divide-y divide-gray-200" id="employeeTableBody">
+                        <!-- Table Rows will be inserted here -->
+
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <div class="text-sm font-medium text-gray-900">450</div>
+                            </td>
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <div class="text-sm font-medium text-gray-900">sndp bag</div>
+                            </td>
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <div class="text-sm font-medium text-gray-900">Blockchain Developer</div>
+                            </td>
+
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <div class="text-sm font-medium text-gray-900">Rs 500</div>
+                            </td>
+
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <div class="text-sm font-medium text-gray-900">6</div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+
+         </div>
+
 
 
     </div>
